--- a/styles/partials/_global.scss
+++ b/styles/partials/_global.scss
@@ -6,8 +6,8 @@ body {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    overflow-x: hidden;  
 }
-
 
 h1 {
     font-family: 'AvenirNext';
